--- a/src/HKABT/hkbat-common-dependencies.yaml
+++ b/src/HKABT/hkbat-common-dependencies.yaml
@@ -10,8 +10,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol01.dat" ]
+  include: [ "/HKABT-bixel Vol01.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 01 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -23,8 +22,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol02.dat" ]
+  include: [ "/HKABT-bixel Vol02.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 02 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -36,8 +34,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol03.dat" ]
+  include: [ "/HKABT-bixel Vol03.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 03 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -49,8 +46,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol04.dat" ]
+  include: [ "/HKABT-bixel Vol04.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 04 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -62,8 +58,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol05.dat" ]
+  include: [ "/HKABT-bixel Vol05.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 05 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -75,8 +70,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol06.dat" ]
+  include: [ "/HKABT-bixel Vol06.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 06 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -88,8 +82,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol07.dat" ]
+  include: [ "/HKABT-bixel Vol07.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 07 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -101,8 +94,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol08.dat" ]
+  include: [ "/HKABT-bixel Vol08.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 08 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -114,8 +106,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol09.dat" ]
+  include: [ "/HKABT-bixel Vol09.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 09 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -127,8 +118,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol10.dat" ]
+  include: [ "/HKABT-bixel Vol10.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 10 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -140,8 +130,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol11.dat" ]
+  include: [ "/HKABT-bixel Vol11.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 11 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -153,8 +142,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol12.dat" ]
+  include: [ "/HKABT-bixel Vol12.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 12 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -166,8 +154,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol13.dat" ]
+  include: [ "/HKABT-bixel Vol13.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 13 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -179,8 +166,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol14.dat" ]
+  include: [ "/HKABT-bixel Vol14.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 14 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -192,8 +178,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol15.dat" ]
+  include: [ "/HKABT-bixel Vol15.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 15 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -205,8 +190,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol16.dat" ]
+  include: [ "/HKABT-bixel Vol16.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 16 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -218,8 +202,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol17.dat" ]
+  include: [ "/HKABT-bixel Vol17.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 17 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -231,8 +214,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol18.dat" ]
+  include: [ "/HKABT-bixel Vol18.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 18 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -244,8 +226,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol19.dat" ]
+  include: [ "/HKABT-bixel Vol19.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 19 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -257,8 +238,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol20.dat" ]
+  include: [ "/HKABT-bixel Vol20.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 20 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -270,8 +250,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol21.dat" ]
+  include: [ "/HKABT-bixel Vol21.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 21 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -283,8 +262,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol22.dat" ]
+  include: [ "/HKABT-bixel Vol22.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 22 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -296,8 +274,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol23.dat" ]
+  include: [ "/HKABT-bixel Vol23.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 23 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -309,8 +286,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-bixel Vol24.dat" ]
+  include: [ "/HKABT-bixel Vol24.dat" ]
 info:
   summary: "HKBAT bixel MEGA Props Vol 24 by Bixel"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -322,8 +298,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/Paulvmontfort Mega Prop Pack 1.dat" ]
+  include: [ "/Paulvmontfort Mega Prop Pack 1.dat" ]
 info:
   summary: "HKBAT Paulvmontfort Mega Prop Pack 1 by Paulvmontfort"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -335,8 +310,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/Paulvmontfort Mega Prop Pack 2.dat" ]
+  include: [ "/Paulvmontfort Mega Prop Pack 2.dat" ]
 info:
   summary: "HKBAT Paulvmontfort Mega Prop Pack 2 by Paulvmontfort"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -348,8 +322,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/Paulvmontfort Mega Prop Pack 3.dat" ]
+  include: [ "/Paulvmontfort Mega Prop Pack 3.dat" ]
 info:
   summary: "HKBAT Paulvmontfort Mega Prop Pack 3 by Paulvmontfort"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -361,8 +334,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/Paulvmontfort Mega Prop Pack 4.dat" ]
+  include: [ "/Paulvmontfort Mega Prop Pack 4.dat" ]
 info:
   summary: "HKBAT Paulvmontfort Mega Prop Pack 4 by Paulvmontfort"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -374,8 +346,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/Paulvmontfort Mega Prop Pack 5.dat" ]
+  include: [ "/Paulvmontfort Mega Prop Pack 5.dat" ]
 info:
   summary: "HKBAT Paulvmontfort Mega Prop Pack 5 by Paulvmontfort"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -387,8 +358,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/Paulvmontfort Mega Prop Pack 6.dat" ]
+  include: [ "/Paulvmontfort Mega Prop Pack 6.dat" ]
 info:
   summary: "HKBAT Paulvmontfort Mega Prop Pack 6 by Paulvmontfort"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -400,8 +370,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/Paulvmontfort Mega Prop Pack 7.dat" ]
+  include: [ "/Paulvmontfort Mega Prop Pack 7.dat" ]
 info:
   summary: "HKBAT Paulvmontfort Mega Prop Pack 7 by Paulvmontfort"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -413,8 +382,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/Paulvmontfort Mega Prop Pack 8.dat" ]
+  include: [ "/Paulvmontfort Mega Prop Pack 8.dat" ]
 info:
   summary: "HKBAT Paulvmontfort Mega Prop Pack 8 by Paulvmontfort"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -426,8 +394,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 1.dat" ]
+  include: [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 1.dat" ]
 info:
   summary: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 1 by DMScopio"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -439,8 +406,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 2.dat" ]
+  include: [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 2.dat" ]
 info:
   summary: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 2 by DMScopio"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -452,8 +418,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 3.dat" ]
+  include: [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 3.dat" ]
 info:
   summary: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 3 by DMScopio"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -465,8 +430,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 4.dat" ]
+  include: [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 4.dat" ]
 info:
   summary: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 4 by DMScopio"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -478,8 +442,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 5.dat" ]
+  include: [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 5.dat" ]
 info:
   summary: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 5 by DMScopio"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -491,8 +454,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 6.dat" ]
+  include: [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 6.dat" ]
 info:
   summary: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 6 by DMScopio"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -504,8 +466,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 7.dat" ]
+  include: [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 7.dat" ]
 info:
   summary: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 7 by DMScopio"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -517,8 +478,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 8.dat" ]
+  include: [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 8.dat" ]
 info:
   summary: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 8 by DMScopio"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
@@ -530,8 +490,7 @@ version: "1.0"
 subfolder: "100-props-textures"
 assets:
 - assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
-  include:
-  [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 9.dat" ]
+  include: [ "/HKABT-NHP Dmscopio MEGA Prop Pack Vol 9.dat" ]
 info:
   summary: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 9 by DMScopio"
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/1-sc4d-lex-legacy-hkabt-dependencies-pack"
