--- a/src/HKABT/hkbat-common-dependencies.yaml
+++ b/src/HKABT/hkbat-common-dependencies.yaml
@@ -1,7 +1,7 @@
 assetId: "sc4d-lex-legacy-hkabt-dependencies-pack"
 version: "1.0"
 lastModified: " 2023-07-19T08:26:22-07:00"
-url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=1:sc4d-lex-legacy-hkabt-dependencies-pack&catid=22"
+url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=1:sc4d-lex-legacy-hkabt-dependencies-pack"
 
 ---
 group: "hkbat"
