--- a/src/HKABT/hkbat-common-dependencies.yaml
+++ b/src/HKABT/hkbat-common-dependencies.yaml
@@ -5,7 +5,7 @@ url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=1:sc
 
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 01"
+name: "bixel-mega-props-vol01"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -17,7 +17,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 02"
+name: "bixel-mega-props-vol02"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -29,7 +29,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 03"
+name: "bixel-mega-props-vol03"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -41,7 +41,7 @@ info:
 
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 04"
+name: "bixel-mega-props-vol04"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -53,7 +53,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 05"
+name: "bixel-mega-props-vol05"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -65,7 +65,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 06"
+name: "bixel-mega-props-vol06"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -77,7 +77,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 07"
+name: "bixel-mega-props-vol07"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -89,7 +89,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 08"
+name: "bixel-mega-props-vol08"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -101,7 +101,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 09"
+name: "bixel-mega-props-vol09"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -113,7 +113,7 @@ info:
 
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 10"
+name: "bixel-mega-props-vol10"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -125,7 +125,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 11"
+name: "bixel-mega-props-vol11"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -137,7 +137,7 @@ info:
 
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 12"
+name: "bixel-mega-props-vol12"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -149,7 +149,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 13"
+name: "bixel-mega-props-vol13"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -161,7 +161,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 14"
+name: "bixel-mega-props-vol14"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -173,7 +173,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 15"
+name: "bixel-mega-props-vol15"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -185,7 +185,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 16"
+name: "bixel-mega-props-vol16"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -197,7 +197,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 17"
+name: "bixel-mega-props-vol17"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -209,7 +209,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 18"
+name: "bixel-mega-props-vol18"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -221,7 +221,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 19"
+name: "bixel-mega-props-vol19"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -233,7 +233,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 20"
+name: "bixel-mega-props-vol20"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -245,7 +245,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 21"
+name: "bixel-mega-props-vol21"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -257,7 +257,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 22"
+name: "bixel-mega-props-vol22"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -269,7 +269,7 @@ info:
 
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 23"
+name: "bixel-mega-props-vol23"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -281,7 +281,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT bixel MEGA Props Vol 24"
+name: "bixel-mega-props-vol24"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -293,7 +293,7 @@ info:
   
 ---
 group: "hkbat"
-name: "Paulvmontfort Mega Prop Pack 1"
+name: "paulvmontfort-mega-prop-pack1"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -305,7 +305,7 @@ info:
 
 ---
 group: "hkbat"
-name: "Paulvmontfort Mega Prop Pack 2"
+name: "paulvmontfort-mega-prop-pack2"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -317,7 +317,7 @@ info:
   
 ---
 group: "hkbat"
-name: "Paulvmontfort Mega Prop Pack 3"
+name: "paulvmontfort-mega-prop-pack3"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -329,7 +329,7 @@ info:
   
 ---
 group: "hkbat"
-name: "Paulvmontfort Mega Prop Pack 4"
+name: "paulvmontfort-mega-prop-pack4"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -341,7 +341,7 @@ info:
   
 ---
 group: "hkbat"
-name: "Paulvmontfort Mega Prop Pack 5"
+name: "paulvmontfort-mega-prop-pack5"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -353,7 +353,7 @@ info:
   
 ---
 group: "hkbat"
-name: "Paulvmontfort Mega Prop Pack 6"
+name: "paulvmontfort-mega-prop-pack6"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -365,7 +365,7 @@ info:
   
 ---
 group: "hkbat"
-name: "Paulvmontfort Mega Prop Pack 7"
+name: "paulvmontfort-mega-prop-pack7"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -377,7 +377,7 @@ info:
   
 ---
 group: "hkbat"
-name: "Paulvmontfort Mega Prop Pack 8"
+name: "paulvmontfort-mega-prop-pack8"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -389,7 +389,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 1"
+name: "dmscopio-mega-prop-pack-vol1"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -401,7 +401,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 2"
+name: "dmscopio-mega-prop-pack-vol2"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -413,7 +413,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 3"
+name: "dmscopio-mega-prop-pack-vol3"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -425,7 +425,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 4"
+name: "dmscopio-mega-prop-pack-vol4"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -437,7 +437,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 5"
+name: "dmscopio-mega-prop-pack-vol5"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -449,7 +449,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 6"
+name: "dmscopio-mega-prop-pack-vol6"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -461,7 +461,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 7"
+name: "dmscopio-mega-prop-pack-vol7"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -473,7 +473,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 8"
+name: "dmscopio-mega-prop-pack-vol8"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
@@ -485,7 +485,7 @@ info:
   
 ---
 group: "hkbat"
-name: "HKABT-NHP Dmscopio MEGA Prop Pack Vol 9"
+name: "dmscopio-mega-prop-pack-vol9"
 version: "1.0"
 subfolder: "100-props-textures"
 assets:
