--- a/.github/workflows/sc4pac.yaml
+++ b/.github/workflows/sc4pac.yaml
@@ -2,7 +2,7 @@ name: Sc4pac CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "action" ]
   pull_request:
     branches: [ "main" ]
   workflow_dispatch:  # for manually triggering the workflow from Actions tab
