--- a/.github/workflows/sc4pac.yaml
+++ b/.github/workflows/sc4pac.yaml
@@ -11,7 +11,7 @@ jobs:
   channel:
     uses: memo33/sc4pac-actions/.github/workflows/sc4pac-channel.yaml@main
     with:
-      path: src                     # path to yaml source files, e.g. src/yaml
+      path: src/yaml                     # path to yaml source files, e.g. src/yaml
       channel-label: SC4Evermore Channel           # your name or other suitable label
       deploy-repository: SC4Evermore/sc4pac-channel  # your GitHub repository
       use-stex-api: false
