--- a/src/yaml/ks_JPN/ks-jpn-common-dependencies.yaml
+++ b/src/yaml/ks_JPN/ks-jpn-common-dependencies.yaml
@@ -4,8 +4,8 @@ lastModified: " 2024-01-20T05:46:39-08:00"
 url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=153:sc4d-lex-legacy-ks-jpn-dependencies"
 
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol01"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol01"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
@@ -16,8 +16,8 @@ info:
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/153-sc4d-lex-legacy-ks-jpn-dependencies"
   
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol02"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol02"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
@@ -28,8 +28,8 @@ info:
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/153-sc4d-lex-legacy-ks-jpn-dependencies"
   
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol03"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol03"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
@@ -40,8 +40,8 @@ info:
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/153-sc4d-lex-legacy-ks-jpn-dependencies"
   
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol04"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol04"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
@@ -52,8 +52,8 @@ info:
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/153-sc4d-lex-legacy-ks-jpn-dependencies"
   
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol05"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol05"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
@@ -64,8 +64,8 @@ info:
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/153-sc4d-lex-legacy-ks-jpn-dependencies"
   
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol06"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol06"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
@@ -76,8 +76,8 @@ info:
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/153-sc4d-lex-legacy-ks-jpn-dependencies"
   
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol07"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol07"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
@@ -88,8 +88,8 @@ info:
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/153-sc4d-lex-legacy-ks-jpn-dependencies"
   
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol08"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol08"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
@@ -100,8 +100,8 @@ info:
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/153-sc4d-lex-legacy-ks-jpn-dependencies"
   
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol09"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol09"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
@@ -112,8 +112,8 @@ info:
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/153-sc4d-lex-legacy-ks-jpn-dependencies"
   
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol10"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol10"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
@@ -124,8 +124,8 @@ info:
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/153-sc4d-lex-legacy-ks-jpn-dependencies"
   
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol11"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol11"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
@@ -136,8 +136,8 @@ info:
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/153-sc4d-lex-legacy-ks-jpn-dependencies"
   
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol12"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol12"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
@@ -148,8 +148,8 @@ info:
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/153-sc4d-lex-legacy-ks-jpn-dependencies"
   
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol13"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol13"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
@@ -160,8 +160,8 @@ info:
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/153-sc4d-lex-legacy-ks-jpn-dependencies"
   
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol14"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol14"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
@@ -172,8 +172,8 @@ info:
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/153-sc4d-lex-legacy-ks-jpn-dependencies"
   
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol15"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol15"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
@@ -184,8 +184,8 @@ info:
   website: "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/153-sc4d-lex-legacy-ks-jpn-dependencies"
   
 ---
-group: "ks_jpn"
-name: "ks_jpn-mega-props-vol16"
+group: "ks-jpn"
+name: "ks-jpn-mega-props-vol16"
 version: "2.0"
 subfolder: "100-props-textures"
 assets:
