Add Tabi & Romualdillo

--- a/src/yaml/Romualdillo/romualdillo-props-vol01.yaml
+++ b/src/yaml/Romualdillo/romualdillo-props-vol01.yaml
@@ -2,6 +2,8 @@ group: "romualdillo"
 name: "romualdillo-props-vol01"
 version: "1.0"
 subfolder: "100-props-textures"
+dependencies:
+- 
 assets:
 - assetId: "romualdillo-props-vol01"
 info:
