--- a/src/yaml/Gizmo/gizmo-effect-props.yaml
+++ b/src/yaml/Gizmo/gizmo-effect-props.yaml
@@ -12,7 +12,7 @@ info:
     - "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/58-gizmo-effect-props"
 
 ---
-assetId: "gizmo-train-props-collection"
+assetId: "gizmo-effect-props"
 version: "3.0"
 lastModified: "2023-08-17T11:34:17-07:00"
 url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=58:gizmo-effect-props"
