--- a/src/yaml/CAM_Team/cam-team-colossus-addon-mod.yaml
+++ b/src/yaml/CAM_Team/cam-team-colossus-addon-mod.yaml
@@ -1,4 +1,10 @@
-group: "cam-team" 
+assetId: "cam-team-colossus-addon-mod"  # original version
+version: "2.5.0"
+lastModified: "2025-03-13T15:43:24-07:00"
+url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=51:colossus-addon-mod"
+
+---
+group: "cam-team"
 name: "colossus-addon-mod"
 version: "2.5.0"
 subfolder: "050-load-first"
@@ -8,22 +14,22 @@ variants:
 - variant: { CAM: "yes" }
   dependencies:
   - "memo:submenus-dll"  # for exemplar patching
-  
+
 variantDescriptions:
   CAM:
     "no": "Choose this if you do not want to install the Colossus Addon Mod (CAM)."
     "yes": "Choose this to install the Colossus Addon Mod (CAM)."
-    
-assets:
-- assetId: "cam-team-colossus-addon-mod"
+
 info:
-  summary: "Colossus Addon Mod"
+  summary: Colossus Addon Mod
   warning: |-
     It is crucial to start a new region when installing CAM, as the mod drastically changes the simulation parameters.
+
   conflicts: |-
     Only compatible with game version 1.1.641, the Windows digital edition.
     Incompatible with `pkg=peg:spam`.
     See the CAM manual for a list of additional mod incompatibilities.
+
   description: |
     The Colossus Addon Mod (CAM) is a big mod that drastically changes the way cities and regions develop.
     Most importantly, it adds new Growth Stages 9 to 15, beyond the game's default Stages 1 through 8.
@@ -34,12 +40,6 @@ info:
     This package includes both Agricultural Demand Fix (I-R fix) and Modpack Zero.
 
     Please consult the extensive CAM documentation for further information.
-  author: "CAM Team"
-  websites:
-    - "https://www.sc4evermore.com/index.php/downloads/download/26-gameplay-mods/51-colossus-addon-mod"
 
----
-assetId: "cam-team-colossus-addon-mod"
-version: "2.5.0"
-lastModified: "2023-11-21T15:18:56-08:00"
-url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=51:colossus-addon-mod"
+  author: "RippleJet, BarbyW, InvisiChem, CorinaMarie, Ulisse Wolf and many others"
+  website: "https://www.sc4evermore.com/index.php/downloads/download/26-gameplay-mods/52-colossus-addon-mod-version-2-1-0a-mac-by-invisichem"
