--- a/src/yaml/Cogeo/cogeo-logistics-centre-dependency-pack.yaml
+++ b/src/yaml/Cogeo/cogeo-logistics-centre-dependency-pack.yaml
@@ -1,21 +1,39 @@
-group: "cogeo"
-name: "cogeo-logistics-centre-dependency-pack-v2"
+assetId: cogeo-logistics-centre-dependency-pack
 version: "2.0"
-subfolder: "100-props-textures"
-dependencies:
-- bsc:mega-props-jes-vol01
-- bsc:mega-props-sg-vol01
-assets:
-- assetId: "cogeo-logistics-centre-dependency-pack-v2"
-info:
-  summary: "Cogeo - Logistic Centre Dependency Pack"
-  description: Logistic Centre Dependency Pack by Cogeo
-  author: "Cogeo"
-  websites:
-    - "https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/212-cogeo-logistics-centre-dependency-pack-v2"
+lastModified: "2025-01-10T01:13:23Z"
+url: https://www.sc4evermore.com/index.php/downloads?task=download.send&id=212:cogeo-logistics-centre-dependency-pack-v2
 
 ---
-assetId: "cogeo-logistics-centre-dependency-pack-v2"
+group: cogeo
+name: logistics-centre-dependency-pack
 version: "2.0"
-lastModified: "2025-03-19T13:44:46-07:00"
-url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=212:cogeo-logistics-centre-dependency-pack-v2"
+subfolder: 100-props-textures
+info:
+  summary: Warehouses BATProps A & B
+  description: |-
+    This package contains warehouse buildings and additional prop families.
+  author: cogeo
+  websites:
+    - https://www.sc4evermore.com/index.php/downloads/download/22-dependencies/212-cogeo-logistics-centre-dependency-pack-v2
+    - https://community.simtropolis.com/files/file/15582-cogeo-logistics-centre-dependency-pack-v2/
+  images:
+    - https://www.simtropolis.com/objects/screens/0018/a56f9ed6fc5fe3622c9611eb12ef2e3b-WALeft.jpg
+    - https://www.simtropolis.com/objects/screens/0018/a56f9ed6fc5fe3622c9611eb12ef2e3b-WARight.jpg
+    - https://www.simtropolis.com/objects/screens/0019/acf131803459f15db092134547827637-WBLeft.jpg
+    - https://www.simtropolis.com/objects/screens/0019/acf131803459f15db092134547827637-WBRight.jpg
+assets:
+  - assetId: cogeo-logistics-centre-dependency-pack
+    include:
+      - Cogeo_LCP_Warehouses_BATProps v..dat  # must load before LHD patch, so we extract it to the top-level
+  - assetId: cogeo-logistics-centre-dependency-pack
+    include:
+      - FreightAutomataSpawningScripts_Swamper77.dat
+      - LCP_Locale_US.dat
+      - /Props/
+variants:
+  - variant: { driveside: right }
+  - variant: { driveside: left }
+    assets:
+      - assetId: cogeo-logistics-centre-dependency-pack
+        include:
+          - z_LCP_UK_PathingPatch.dat
