--- a/src/yaml/Eggman121/ncd-bsc-realrailway-texture-pack-by-eggman121-and-rivit.yaml
+++ b/src/yaml/Eggman121/ncd-bsc-realrailway-texture-pack-by-eggman121-and-rivit.yaml
@@ -30,4 +30,4 @@ info:
 assetId: "ncd-bsc-realrailway-texture-pack-by-eggman121-and-rivit"
 version: "1-1"
 lastModified: "2024-01-24T00:41:39Z"
-url: - "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=207:ncd-bsc-realrailway-texture-pack-by-eggman121-and-rivit"
+url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=207:ncd-bsc-realrailway-texture-pack-by-eggman121-and-rivit"
