--- a/src/yaml/Eggman121/ncd-bsc-realrailway-texture-pack-by-eggman121-and-rivit.yaml
+++ b/src/yaml/Eggman121/ncd-bsc-realrailway-texture-pack-by-eggman121-and-rivit.yaml
@@ -28,6 +28,6 @@ info:
     - "https://www.sc4evermore.com/images/jdownloads/screenshots/NCD-BSC%20RealRailway%20Texture%20Pack%20V1-01.jpg"
 ---
 assetId: "ncd-bsc-realrailway-texture-pack-by-eggman121-and-rivit"
-version: "1-1"
+version: "3.48"
 lastModified: "2024-01-24T00:41:39Z"
 url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=207:ncd-bsc-realrailway-texture-pack-by-eggman121-and-rivit"
