--- a/src/yaml/GTG/bosch-building.yaml
+++ b/src/yaml/GTG/bosch-building.yaml
@@ -7,7 +7,7 @@ assets:
 info:
   summary: "Bosch Building by gottago(GTG)"
   description: |-
-    No. 2-10 Hohenzollernring stands on a prominent location at Rudolfplatz in Cologne, and is typical of the boxy, low-rise commercial buildings built in postwar Germany. This is my second BAT and, with the VHS Building, the second in this Cologne commercials series. The curious rooftrack and corner 'ears' are window-cleaning equipment.
+    No. 2-10 Hohenzollernring stands on a prominent location at Rudolfplatz in Cologne, and is typical of the boxy, low-rise commercial buildings built in postwar Germany. This was second BAT and, with the VHS Building, the second in this Cologne commercials series. The curious rooftrack and corner 'ears' are window-cleaning equipment.
 
     As the BAT fills an entire 2x4 W2W corner lot, there are no dependencies. Two versions of the lot will be installed a growable 4x2 CS §§ stage 6, and a ploppable LM CS §§ with jobs.
 
