--- a/src/yaml/GTG/vhs-building.yaml
+++ b/src/yaml/GTG/vhs-building.yaml
@@ -12,7 +12,7 @@ info:
   description: |-
     VHS is an abbreviation of Volkshochschule, or community college, in German. The original building stands on Cäcilienstraße at Neumarkt in Cologne, Germany. The unusual, banded entry facade is a bas-relief by the Italian sculptor Arnoldo Pomodoro.
 
-    This is my first BAT and was created to begin to fill a shortage of long, low-rise commercial buildings in SC4. Three versions of the lot will be installed a college, a growable 5x2 CO §§ stage 6, and a ploppable LM CO §§ with jobs (included as CO lots of these dimensions are difficult to grow).
+    This was created to begin to fill a shortage of long, low-rise commercial buildings in SC4. Three versions of the lot will be installed a college, a growable 5x2 CO §§ stage 6, and a ploppable LM CO §§ with jobs (included as CO lots of these dimensions are difficult to grow).
 
     **INSTALLATION**
 
