--- a/src/yaml/CP/early-19th-century-residentials.yaml
+++ b/src/yaml/CP/early-19th-century-residentials.yaml
@@ -96,4 +96,4 @@ info:
 assetId: "cycledogg-early-19th-century-residentials"
 version: "2.0"
 lastModified: "2025-05-03T17:51:59-07:00"
-url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=404:gtg-bosch-building"
+url: "https://www.sc4evermore.com/index.php/downloads?task=download.send&id=5:sc4d-lex-legacy-cp-early19thcenturyresidentials-pack"
