--- a/src/yaml/CP/early-19th-century-residentials.yaml
+++ b/src/yaml/CP/early-19th-century-residentials.yaml
@@ -41,7 +41,7 @@ info:
 
     **DLL DEPENDENCIES:**
 
-    In order for the contents of this package to display correctly by taking advantage of the new DLL Mods requires the complete installation of the following dependencies (the below listed dependencies are covering a full install):
+    In order for the contents of this package to display correctly by taking advantage of the new DLL Mods requires the complete installation of the following dependencies (the below listed dependencies are covering a full install)
 
     Allow More Building Styles DLL Plugin - You need to get the function of the additional styles
 
@@ -49,7 +49,7 @@ info:
 
     **DEPENDENCIES:**
 
-    The following files are required in order for the contents of this package to appear correctly and they work correctly (i.e., no 'brown boxes' or missing textures) (Bear in mind that the original readmes are also available in the ~Documents folder, but they have not been updated):
+    The following files are required in order for the contents of this package to appear correctly and they work correctly (i.e., no 'brown boxes' or missing textures) (Bear in mind that the original readmes are also available in the ~Documents folder, but they have not been updated)
 
     * BSC Common Dependencies Pack V9 (and above)
     The below listed dependencies are all can be found in the hereby linked dependency pack compilation.
