--- a/src/yaml/CP/early-19th-century-residentials.yaml
+++ b/src/yaml/CP/early-19th-century-residentials.yaml
@@ -15,11 +15,12 @@ dependencies:
 - "bsc:textures-vol02"
 - "peg:mtp-super-pack"
 variants:
- - variant: { cycledogg-early-19th-century-residentials-pack:buildingstyle: "no" }
+ - variant: { buildingstyle: "no" }
    assets:
    - assetId: "cycledogg-early-19th-century-residentials-pack"
- - variant: { cycledogg-early-19th-century-residentials-pack:buildingstyle: "yes" }
-   dependencies: [ "null-45:allow-more-building-styles" ]
+ - variant: { buildingstyle: "yes" }
+   dependencies: 
+   - "null-45:allow-more-building-styles"
    assets:
    - assetId: "cycledogg-early-19th-century-residentials-pack"
 info:
