--- a/src/yaml/JMyers/homes-pack.yaml
+++ b/src/yaml/JMyers/homes-pack.yaml
@@ -12,12 +12,12 @@ dependencies:
 variants:
  - variant: { building-style: "no" }
    assets:
-   - assetId: "cycledogg-early-19th-century-residentials-pack"
+   - assetId: "jmyers-homes-pack"
  - variant: { building-style: "yes" }
    dependencies: 
    - "null-45:allow-more-building-styles-dll"
    assets:
-   - assetId: "cycledogg-early-19th-century-residentials-pack"
+   - assetId: "jmyers-homes-pack"
 variantInfo:
 - variantId: "building-style"
   description: This setting determines whether to install the version that supports additional building styles or the original version without support for additional styles activated
